[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mujoco-mojo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastparquet>=2025.12.0",
    "matplotlib>=3.10.8",
    "mujoco>=3.4.0",
    "numpy>=2.4.1",
    "numpydantic>=1.7.0",
    "pandas>=3.0.0",
    "pybind11-stubgen>=2.5.5",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = ["pyright[nodejs]>=1.1.408", "pytest>=9.0.2", "ruff>=0.14.14"]

[tool.ruff]
exclude = ["typings", "**/__init__.py"]

[tool.pyright]
stubPath = "typings"
venvPath = "."
venv = ".venv"
ignore = ["typings"]
