[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mujoco-mojo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastparquet>=2025.12.0",
    "matplotlib>=3.10.8",
    "mujoco>=3.4.0",
    "numpy>=2.4.1",
    "numpydantic>=1.7.0",
    "pandas>=3.0.0",
    "pybind11-stubgen>=2.5.5",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "griffe-pydantic>=1.2.0",
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.6.0",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material>=9.7.1",
    "mkdocs-section-index>=0.3.10",
    "mkdocstrings[python]>=1.0.2",
    "pyright[nodejs]>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "tabulate>=0.9.0",
]

[tool.ruff]
exclude = ["typings"]

[tool.pyright]
stubPath = "typings"
venvPath = "."
venv = ".venv"
ignore = ["typings"]
